--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+        <script type="text/javascript">
+        	alert('hello');
+        </script>
         <title>Rango</title>
     </head>
 
